fixing new page load on mobile issue

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -759,12 +759,7 @@ Background Image Styling
 	}*/
 }
 
-.checkout-holder {
-	background: rgba(100, 100, 100, 0.7);
-	background: -webkit-linear-gradient(#676767 0%, #383838 100%);
-	background: -o-linear-gradient(#676767 0%, #383838 100%);
-	background: linear-gradient(#676767 0%, #383838 100%);
-}
+
 /*************************************
 Footer
 *************************************/
